# ozempdf

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  net.pedropaulo.OzemPDF.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-appimage.sh  build-deb.sh  build-flatpak.sh  download-gs-win.sh  fix-deb.sh
src/: about.ts  compressor.ts  main.test.ts  main.ts  state.test.ts  state.ts  styles.css  translations.ts  ui.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: net.pedropaulo.OzemPDF.desktop  net.pedropaulo.OzemPDF.metainfo.xml
src-tauri/src/: lib.rs  main.rs
