[package]
name = "ozempdf"
version = "0.1.0-beta.2"
description = "Aplicativo Tauri para compactacao de PDF"
authors = ["Pedro"]
edition = "2021"

[lib]
name = "ozempdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
